# huawei-cloud-api-definitions

./: .gitignore  Cargo.template.toml  Cargo.toml  publish.sh
schemas/AAD/: Cargo.toml
schemas/AAD/src/: AddBlackWhiteIpList.json  AddBlackWhiteIpList.rs  AddPolicyBlackAndWhiteIpList.rs  AddWafWhiteIpRule.json  AddWafWhiteIpRule.rs  AssociateIpToPolicy.json  AssociateIpToPolicy.rs  AssociateIpToPolicyAndPackage.json  AssociateIpToPolicyAndPackage.rs  BatchCreateInstanceIpRule.json  BatchCreateInstanceIpRule.rs  BatchDeleteInstanceIpRule.json  BatchDeleteInstanceIpRule.rs  CreateAadDomain.json  CreateAadDomain.rs  CreateCertificate.json  CreateCertificate.rs  CreateDomain.json  CreateDomain.rs  CreatePolicy.json  CreatePolicy.rs  DeleteAlarmConfig.rs  DeleteBlackWhiteIpList.json  DeleteBlackWhiteIpList.rs  DeleteDomain.json  DeleteDomain.rs  DeletePolicy.rs  DeletePolicyBlackAndWhiteIpList.rs  DeleteWafWhiteIpRule.json  DeleteWafWhiteIpRule.rs  DisassociateIpFromPolicy.json  DisassociateIpFromPolicy.rs  DisassociateIpFromPolicyAndPackage.json  DisassociateIpFromPolicyAndPackage.rs  ExecuteUnblockIp.json  ExecuteUnblockIp.rs  ListBlockIps.json  ListBlockIps.rs  ListDDoSAttackEvent.json  ListDDoSAttackEvent.rs  (+97 more)
schemas/APM/: Cargo.toml
schemas/APM/src/: ChangeAgentStatus.json  ChangeAgentStatus.rs  CreateAkSk.rs  CreateBusiness.json  CreateBusiness.rs  DeleteAgent.rs  DeleteAkSk.json  DeleteAkSk.rs  DeleteApp.json  DeleteApp.rs  ListAkSk.json  ListAkSk.rs  ListAlarmData.json  ListAlarmData.rs  ListAlarmNotify.json  ListAlarmNotify.rs  ListAppEnvs.json  ListAppEnvs.rs  ListApps.json  ListApps.rs  ListBusiness.json  ListBusiness.rs  ListBusinessEnv.json  ListBusinessEnv.rs  ListEnvInstances.json  ListEnvInstances.rs  ListEnvMonitorItem.json  ListEnvMonitorItem.rs  ListEnvTags.json  ListEnvTags.rs  ListOpenRegion.json  ListOpenRegion.rs  ListSupportedRegion.json  ListSupportedRegion.rs  SaveMonitorItemConfig.json  SaveMonitorItemConfig.rs  SearchAgent.json  SearchAgent.rs  SearchApplication.json  SearchApplication.rs  (+44 more)
schemas/AgentIdentity/: Cargo.toml
schemas/AgentIdentity/src/: CompleteResourceTokenAuth.rs  CreateApiKeyCredentialProvider.rs  CreateOauth2CredentialProvider.rs  CreateStsCredentialProvider.rs  CreateWorkloadAccessToken.rs  CreateWorkloadAccessTokenForJwt.rs  CreateWorkloadAccessTokenForUserId.rs  CreateWorkloadIdentity.rs  DeleteApiKeyCredentialProvider.rs  DeleteOauth2CredentialProvider.rs  DeleteStsCredentialProvider.rs  DeleteWorkloadIdentity.rs  GetApiKeyCredentialProvider.rs  GetOauth2CredentialProvider.rs  GetResourceApiKey.rs  GetResourceOauth2Token.rs  GetResourceStsToken.rs  GetStsCredentialProvider.rs  GetTokenVault.rs  GetWorkloadIdentity.rs  GetWorkloadIdentityAuthorizerConfiguration.rs  ListApiKeyCredentialProviders.rs  ListOauth2CredentialProviders.rs  ListStsCredentialProviders.rs  ListWorkloadIdentities.rs  Oauth2Authorize.rs  Oauth2Callback.rs  UpdateApiKeyCredentialProvider.rs  UpdateOauth2CredentialProvider.rs  UpdateStsCredentialProvider.rs  UpdateWorkloadIdentity.rs  lib.rs
schemas/BMS/: Cargo.toml
schemas/BMS/src/: AddServerNics.json  AddServerNics.rs  AttachBaremetalServerVolume.json  AttachBaremetalServerVolume.rs  BatchCreateBaremetalServerTags.json  BatchCreateBaremetalServerTags.rs  BatchDeleteBaremetalServerTags.json  BatchDeleteBaremetalServerTags.rs  BatchRebootBaremetalServers.rs  BatchStartBaremetalServers.rs  BatchStopBaremetalServers.json  BatchStopBaremetalServers.rs  ChangeBaremetalServerName.json  ChangeBaremetalServerName.rs  ChangeBaremetalServerOs.json  ChangeBaremetalServerOs.rs  CreateBareMetalServers.json  CreateBareMetalServers.rs  DeleteServerNics.json  DeleteServerNics.rs  DeleteWindowsBareMetalServerPassword.rs  DetachBaremetalServerVolume.json  DetachBaremetalServerVolume.rs  ListBareMetalServerDetails.json  ListBareMetalServerDetails.rs  ListBareMetalServers.json  ListBareMetalServers.rs  ListBareMetalServersDetail.json  ListBareMetalServersDetail.rs  ListBaremetalFlavorDetailExtends.json  ListBaremetalFlavorDetailExtends.rs  ModifyVmNic.json  ModifyVmNic.rs  ReinstallBaremetalServerOs.json  ReinstallBaremetalServerOs.rs  ResetPwdOneClick.rs  ShowAvailableResource.json  ShowAvailableResource.rs  ShowBaremetalServerInterfaceAttachments.json  ShowBaremetalServerInterfaceAttachments.rs  (+24 more)
schemas/CAE/: Cargo.toml
schemas/CAE/src/: CreateAgency.json  CreateAgency.rs  CreateApplication.json  CreateApplication.rs  CreateCertificate.json  CreateCertificate.rs  CreateComponent.json  CreateComponent.rs  CreateComponentConfiguration.json  CreateComponentConfiguration.rs  CreateComponentWithConfiguration.json  CreateComponentWithConfiguration.rs  CreateDomain.json  CreateDomain.rs  CreateEnvironment.json  CreateEnvironment.rs  CreateMonitorSystem.json  CreateMonitorSystem.rs  CreateNoticeRule.json  CreateNoticeRule.rs  CreateSecret.json  CreateSecret.rs  CreateTimerRule.json  CreateTimerRule.rs  CreateVolume.json  CreateVolume.rs  CreateVpcEgress.json  CreateVpcEgress.rs  DeleteApplication.json  DeleteApplication.rs  DeleteCertificate.json  DeleteCertificate.rs  DeleteComponent.json  DeleteComponent.rs  DeleteComponentConfiguration.json  DeleteComponentConfiguration.rs  DeleteDomain.json  DeleteDomain.rs  DeleteEnvironment.json  DeleteEnvironment.rs  (+75 more)
schemas/CBH/: Cargo.toml
schemas/CBH/src/: BatchCreateInstanceTag.json  CreateCbh.rs  (+99 more)
schemas/CBS/: Cargo.toml
schemas/CPCS/: Cargo.toml
schemas/CPTS/: Cargo.toml
schemas/CSE/: Cargo.toml
schemas/CSMS/: Cargo.toml
schemas/CloudDC/: Cargo.toml
schemas/CloudIDE/: Cargo.toml
schemas/CloudRTC/: Cargo.toml
schemas/CloudTest/: Cargo.toml
schemas/CodeArtsBuild/: Cargo.toml
schemas/CodeArtsCheck/: Cargo.toml
schemas/CodeArtsDeploy/: Cargo.toml
schemas/DAS/: Cargo.toml
schemas/DBSS/: Cargo.toml
schemas/DC/: Cargo.toml
schemas/DDM/: Cargo.toml
schemas/DGC/: Cargo.toml
schemas/DIS/: Cargo.toml
schemas/DSC/: Cargo.toml
schemas/DWR/: Cargo.toml
schemas/DataArtsFabric/: Cargo.toml
schemas/DataArtsInsight/: Cargo.toml
schemas/DevStar/: Cargo.toml
(+36543 files in other folders)
