[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
ChangeAgentStatus = []
CreateAkSk = []
CreateBusiness = []
DeleteAgent = []
DeleteAkSk = []
DeleteApp = []
ListAkSk = []
ListAlarmData = []
ListAlarmNotify = []
ListAppEnvs = []
ListApps = []
ListBusiness = []
ListBusinessEnv = []
ListEnvInstances = []
ListEnvMonitorItem = []
ListEnvTags = []
ListOpenRegion = []
ListSupportedRegion = []
SaveMonitorItemConfig = []
SearchAgent = []
SearchApplication = []
SearchBusinessTopology = []
SearchEnvTopology = []
SearchTransaction = []
SearchTransactionConfig = []
ShowAccessPoint = []
ShowAkSks = []
ShowBusinessDetail = []
ShowClobDetail = []
ShowEnvMonitorItems = []
ShowEventDetail = []
ShowFlameLineTree = []
ShowMasterAddress = []
ShowMonitorItemDetail = []
ShowMonitorItemViewConfig = []
ShowRawTable = []
ShowSpanSearch = []
ShowSubBusinessDetail = []
ShowSumTable = []
ShowToken = []
ShowTopology = []
ShowTopologyTree = []
ShowTraceEvents = []
ShowTransactionDetail = []
ShowTrend = []
full = ["ChangeAgentStatus", "CreateAkSk", "CreateBusiness", "DeleteAgent", "DeleteAkSk", "DeleteApp", "ListAkSk", "ListAlarmData", "ListAlarmNotify", "ListAppEnvs", "ListApps", "ListBusiness", "ListBusinessEnv", "ListEnvInstances", "ListEnvMonitorItem", "ListEnvTags", "ListOpenRegion", "ListSupportedRegion", "SaveMonitorItemConfig", "SearchAgent", "SearchApplication", "SearchBusinessTopology", "SearchEnvTopology", "SearchTransaction", "SearchTransactionConfig", "ShowAccessPoint", "ShowAkSks", "ShowBusinessDetail", "ShowClobDetail", "ShowEnvMonitorItems", "ShowEventDetail", "ShowFlameLineTree", "ShowMasterAddress", "ShowMonitorItemDetail", "ShowMonitorItemViewConfig", "ShowRawTable", "ShowSpanSearch", "ShowSubBusinessDetail", "ShowSumTable", "ShowToken", "ShowTopology", "ShowTopologyTree", "ShowTraceEvents", "ShowTransactionDetail", "ShowTrend"]

[lib]
name = "huawei_cloud_api_definitions_APM"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-APM"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
