[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CompleteResourceTokenAuth = []
CreateApiKeyCredentialProvider = []
CreateOauth2CredentialProvider = []
CreateStsCredentialProvider = []
CreateWorkloadAccessToken = []
CreateWorkloadAccessTokenForJwt = []
CreateWorkloadAccessTokenForUserId = []
CreateWorkloadIdentity = []
DeleteApiKeyCredentialProvider = []
DeleteOauth2CredentialProvider = []
DeleteStsCredentialProvider = []
DeleteWorkloadIdentity = []
GetApiKeyCredentialProvider = []
GetOauth2CredentialProvider = []
GetResourceApiKey = []
GetResourceOauth2Token = []
GetResourceStsToken = []
GetStsCredentialProvider = []
GetTokenVault = []
GetWorkloadIdentity = []
GetWorkloadIdentityAuthorizerConfiguration = []
ListApiKeyCredentialProviders = []
ListOauth2CredentialProviders = []
ListStsCredentialProviders = []
ListWorkloadIdentities = []
Oauth2Authorize = []
Oauth2Callback = []
UpdateApiKeyCredentialProvider = []
UpdateOauth2CredentialProvider = []
UpdateStsCredentialProvider = []
UpdateWorkloadIdentity = []
full = ["CompleteResourceTokenAuth", "CreateApiKeyCredentialProvider", "CreateOauth2CredentialProvider", "CreateStsCredentialProvider", "CreateWorkloadAccessToken", "CreateWorkloadAccessTokenForJwt", "CreateWorkloadAccessTokenForUserId", "CreateWorkloadIdentity", "DeleteApiKeyCredentialProvider", "DeleteOauth2CredentialProvider", "DeleteStsCredentialProvider", "DeleteWorkloadIdentity", "GetApiKeyCredentialProvider", "GetOauth2CredentialProvider", "GetResourceApiKey", "GetResourceOauth2Token", "GetResourceStsToken", "GetStsCredentialProvider", "GetTokenVault", "GetWorkloadIdentity", "GetWorkloadIdentityAuthorizerConfiguration", "ListApiKeyCredentialProviders", "ListOauth2CredentialProviders", "ListStsCredentialProviders", "ListWorkloadIdentities", "Oauth2Authorize", "Oauth2Callback", "UpdateApiKeyCredentialProvider", "UpdateOauth2CredentialProvider", "UpdateStsCredentialProvider", "UpdateWorkloadIdentity"]

[lib]
name = "huawei_cloud_api_definitions_AgentIdentity"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-AgentIdentity"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
