[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
AddServerNics = []
AttachBaremetalServerVolume = []
BatchCreateBaremetalServerTags = []
BatchDeleteBaremetalServerTags = []
BatchRebootBaremetalServers = []
BatchStartBaremetalServers = []
BatchStopBaremetalServers = []
ChangeBaremetalServerName = []
ChangeBaremetalServerOs = []
CreateBareMetalServers = []
DeleteServerNics = []
DeleteWindowsBareMetalServerPassword = []
DetachBaremetalServerVolume = []
ListBareMetalServerDetails = []
ListBareMetalServers = []
ListBareMetalServersDetail = []
ListBaremetalFlavorDetailExtends = []
ReinstallBaremetalServerOs = []
ResetPwdOneClick = []
ShowBaremetalServerInterfaceAttachments = []
ShowBaremetalServerTags = []
ShowBaremetalServerVolumeInfo = []
ShowJobInfos = []
ShowMetadataOptions = []
ShowResetPwd = []
ShowServerRemoteConsole = []
ShowSpecifiedVersion = []
ShowTenantQuota = []
ShowVersionsInfo = []
ShowWindowsBaremetalServerPwd = []
UpdateBaremetalServerInterfaceAttachments = []
UpdateBaremetalServerMetadata = []
UpdateMetadataOptions = []
full = ["AddServerNics", "AttachBaremetalServerVolume", "BatchCreateBaremetalServerTags", "BatchDeleteBaremetalServerTags", "BatchRebootBaremetalServers", "BatchStartBaremetalServers", "BatchStopBaremetalServers", "ChangeBaremetalServerName", "ChangeBaremetalServerOs", "CreateBareMetalServers", "DeleteServerNics", "DeleteWindowsBareMetalServerPassword", "DetachBaremetalServerVolume", "ListBaremetalFlavorDetailExtends", "ListBareMetalServerDetails", "ListBareMetalServers", "ListBareMetalServersDetail", "ReinstallBaremetalServerOs", "ResetPwdOneClick", "ShowBaremetalServerInterfaceAttachments", "ShowBaremetalServerTags", "ShowBaremetalServerVolumeInfo", "ShowJobInfos", "ShowMetadataOptions", "ShowResetPwd", "ShowServerRemoteConsole", "ShowSpecifiedVersion", "ShowTenantQuota", "ShowVersionsInfo", "ShowWindowsBaremetalServerPwd", "UpdateBaremetalServerInterfaceAttachments", "UpdateBaremetalServerMetadata", "UpdateMetadataOptions"]

[lib]
name = "huawei_cloud_api_definitions_BMS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-BMS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
