[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchCreateInstanceTag = []
ChangeInstanceNetwork = []
ChangeInstanceOrder = []
CountInstancesByTag = []
CreateCbh = []
CreateInstance = []
CreateInstanceOrder = []
DeleteInstance = []
InstallCbhEip = []
InstallInstanceEip = []
ListAvailableZones = []
ListCbhInstance = []
ListInstances = []
ListInstancesByTag = []
ListQuotaStatus = []
ListSpecifications = []
ListTags = []
LoginCbh = []
LoginInstance = []
RebootInstance = []
RegisterAuthorization = []
ResetInstanceLoginMethod = []
ResetInstancePassword = []
ResetLoginMethod = []
ResetPassword = []
ResizeInstance = []
RestartCbhInstance = []
RollbackInstance = []
SearchQuota = []
ShowAuthorization = []
ShowAvailableZoneInfo = []
ShowEcsQuota = []
ShowInstanceStatus = []
ShowInstanceTags = []
ShowNetworkConfiguration = []
ShowOmUrl = []
ShowQuota = []
StartCbhInstance = []
StartInstance = []
StopCbhInstance = []
StopInstance = []
UninstallCbhEip = []
UninstallInstanceEip = []
UpdateInstanceSecurityGroup = []
UpgradeCbhInstance = []
UpgradeInstance = []
full = ["BatchCreateInstanceTag", "ChangeInstanceNetwork", "ChangeInstanceOrder", "CountInstancesByTag", "CreateCbh", "CreateInstance", "CreateInstanceOrder", "DeleteInstance", "InstallCbhEip", "InstallInstanceEip", "ListAvailableZones", "ListCbhInstance", "ListInstances", "ListInstancesByTag", "ListQuotaStatus", "ListSpecifications", "ListTags", "LoginCbh", "LoginInstance", "RebootInstance", "RegisterAuthorization", "ResetInstanceLoginMethod", "ResetInstancePassword", "ResetLoginMethod", "ResetPassword", "ResizeInstance", "RestartCbhInstance", "RollbackInstance", "SearchQuota", "ShowAuthorization", "ShowAvailableZoneInfo", "ShowEcsQuota", "ShowInstanceStatus", "ShowInstanceTags", "ShowNetworkConfiguration", "ShowOmUrl", "ShowQuota", "StartCbhInstance", "StartInstance", "StopCbhInstance", "StopInstance", "UninstallCbhEip", "UninstallInstanceEip", "UpdateInstanceSecurityGroup", "UpgradeCbhInstance", "UpgradeInstance"]

[lib]
name = "huawei_cloud_api_definitions_CBH"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CBH"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
