[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CollectHotQuestions = []
CollectKeyWords = []
CollectReplyRates = []
CollectSessionStats = []
CreateSession = []
DeleteSession = []
ExecuteComposeVideo = []
ExecuteComposeVideoOndemand = []
ExecuteCreateVideo = []
ExecuteDeleteVideoById = []
ExecuteDeleteimageById = []
ExecuteGetCharacterInfoById = []
ExecuteGetCharacters = []
ExecuteGetFramsListByImagesId = []
ExecuteGetImagesList = []
ExecuteGetVideoInfoById = []
ExecuteGetVideosList = []
ExecutePostCreateImages = []
ExecuteQaChat = []
ExecuteSession = []
ExecuteUpdateImageName = []
ExecuteUpdateVideoById = []
ExecuteUpdateVideoInfoById = []
ExecuteUploadImage = []
ExecuteUploadPpt = []
ListSuggestions = []
PostRequests = []
TagLabor = []
TagSatisfaction = []
full = ["CollectHotQuestions", "CollectKeyWords", "CollectReplyRates", "CollectSessionStats", "CreateSession", "DeleteSession", "ExecuteComposeVideo", "ExecuteComposeVideoOndemand", "ExecuteCreateVideo", "ExecuteDeleteimageById", "ExecuteDeleteVideoById", "ExecuteGetCharacterInfoById", "ExecuteGetCharacters", "ExecuteGetFramsListByImagesId", "ExecuteGetImagesList", "ExecuteGetVideoInfoById", "ExecuteGetVideosList", "ExecutePostCreateImages", "ExecuteQaChat", "ExecuteSession", "ExecuteUpdateImageName", "ExecuteUpdateVideoById", "ExecuteUpdateVideoInfoById", "ExecuteUploadImage", "ExecuteUploadPpt", "ListSuggestions", "PostRequests", "TagLabor", "TagSatisfaction"]

[lib]
name = "huawei_cloud_api_definitions_CBS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CBS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
