[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
AssociateApps = []
AuthorizeAccessKeys = []
BatchDisableAccessKeys = []
BatchEnableAccessKeys = []
CancelAuthorizeAccessKeys = []
CreateApp = []
CreateAppAccessKey = []
CreateCluster = []
DeleteAccessKey = []
DeleteApp = []
DeleteCcspCluster = []
DisableCcspInstance = []
DisassociateApps = []
EnableCcspInstance = []
ListCcspTenantImages = []
ShowAccessKey = []
ShowAppAccessKeyList = []
ShowAppList = []
ShowAssociationList = []
ShowAvailableAz = []
ShowCcspCluster = []
ShowCcspClusterList = []
ShowCcspInstanceInfo = []
ShowClusterAccessKeyList = []
ShowClusterUri = []
ShowResourceInfo = []
ShowVmMonitor = []
full = ["AssociateApps", "AuthorizeAccessKeys", "BatchDisableAccessKeys", "BatchEnableAccessKeys", "CancelAuthorizeAccessKeys", "CreateApp", "CreateAppAccessKey", "CreateCluster", "DeleteAccessKey", "DeleteApp", "DeleteCcspCluster", "DisableCcspInstance", "DisassociateApps", "EnableCcspInstance", "ListCcspTenantImages", "ShowAccessKey", "ShowAppAccessKeyList", "ShowAppList", "ShowAssociationList", "ShowAvailableAz", "ShowCcspCluster", "ShowCcspClusterList", "ShowCcspInstanceInfo", "ShowClusterAccessKeyList", "ShowClusterUri", "ShowResourceInfo", "ShowVmMonitor"]

[lib]
name = "huawei_cloud_api_definitions_CPCS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CPCS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
