[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchUpdateTaskStatus = []
CreateCase = []
CreateDirectory = []
CreateNewCase = []
CreateNewTask = []
CreateProject = []
CreateTask = []
CreateTemp = []
CreateVariable = []
DebugCase = []
DeleteCase = []
DeleteDirectory = []
DeleteNewCase = []
DeleteNewTask = []
DeleteProject = []
DeleteTask = []
DeleteTemp = []
DeleteVariable = []
ListProjectSets = []
ListProjectTestCase = []
ListTaskCases = []
ListVariables = []
ShowAgentConfig = []
ShowCase = []
ShowHistoryRunInfo = []
ShowMergeCaseDetail = []
ShowMergeReportLogsOutline = []
ShowMergeTaskCase = []
ShowProcess = []
ShowProject = []
ShowReport = []
ShowTask = []
ShowTaskCaseAwChart = []
ShowTaskSet = []
ShowTemp = []
ShowTempSet = []
UpdateAgentHealthStatus = []
UpdateCase = []
UpdateDirectory = []
UpdateNewCase = []
UpdateProject = []
UpdateTask = []
UpdateTaskRelatedTestCase = []
UpdateTaskStatus = []
UpdateTemp = []
UpdateVariable = []
full = ["BatchUpdateTaskStatus", "CreateCase", "CreateDirectory", "CreateNewCase", "CreateNewTask", "CreateProject", "CreateTask", "CreateTemp", "CreateVariable", "DebugCase", "DeleteCase", "DeleteDirectory", "DeleteNewCase", "DeleteNewTask", "DeleteProject", "DeleteTask", "DeleteTemp", "DeleteVariable", "ListProjectSets", "ListProjectTestCase", "ListTaskCases", "ListVariables", "ShowAgentConfig", "ShowCase", "ShowHistoryRunInfo", "ShowMergeCaseDetail", "ShowMergeReportLogsOutline", "ShowMergeTaskCase", "ShowProcess", "ShowProject", "ShowReport", "ShowTask", "ShowTaskCaseAwChart", "ShowTaskSet", "ShowTemp", "ShowTempSet", "UpdateAgentHealthStatus", "UpdateCase", "UpdateDirectory", "UpdateNewCase", "UpdateProject", "UpdateTask", "UpdateTaskRelatedTestCase", "UpdateTaskStatus", "UpdateTemp", "UpdateVariable"]

[lib]
name = "huawei_cloud_api_definitions_CPTS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CPTS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
