[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CreateEngine = []
CreateGovernancePolicy = []
CreateMicroserviceRouteRule = []
CreateNacosNamespaces = []
DeleteEngine = []
DeleteGovernancePolicy = []
DeleteMicroserviceRouteRule = []
DeleteNacosNamespaces = []
DownloadKie = []
ListEngines = []
ListFlavors = []
ListGovernancePolicy = []
ListGovernancePolicyByPolicyId = []
ListGovernancePolicys = []
ListMicroserviceRouteRule = []
ListNacosNamespaces = []
ResizeEngine = []
RetryEngine = []
ShowEngine = []
ShowEngineJob = []
ShowEngineQuotas = []
UpdateGovernancePolicy = []
UpdateNacosNamespaces = []
UpgradeEngine = []
UpgradeEngineConfig = []
UploadKie = []
full = ["CreateEngine", "CreateGovernancePolicy", "CreateMicroserviceRouteRule", "CreateNacosNamespaces", "DeleteEngine", "DeleteGovernancePolicy", "DeleteMicroserviceRouteRule", "DeleteNacosNamespaces", "DownloadKie", "ListEngines", "ListFlavors", "ListGovernancePolicy", "ListGovernancePolicyByPolicyId", "ListGovernancePolicys", "ListMicroserviceRouteRule", "ListNacosNamespaces", "ResizeEngine", "RetryEngine", "ShowEngine", "ShowEngineJob", "ShowEngineQuotas", "UpdateGovernancePolicy", "UpdateNacosNamespaces", "UpgradeEngine", "UpgradeEngineConfig", "UploadKie"]

[lib]
name = "huawei_cloud_api_definitions_CSE"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CSE"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
