[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchCreateOrDeleteTags = []
CreateSecret = []
CreateSecretEvent = []
CreateSecretTag = []
CreateSecretVersion = []
DeleteSecret = []
DeleteSecretEvent = []
DeleteSecretForSchedule = []
DeleteSecretStage = []
DeleteSecretTag = []
DownloadSecretBlob = []
ListNotificationRecords = []
ListProjectSecretsTags = []
ListResourceInstances = []
ListSecretEvents = []
ListSecretTags = []
ListSecretVersions = []
ListSecrets = []
RestoreSecret = []
RotateSecret = []
ShowSecret = []
ShowSecretEvent = []
ShowSecretStage = []
ShowSecretVersion = []
UpdateSecret = []
UpdateSecretEvent = []
UpdateSecretStage = []
UpdateVersion = []
UploadSecretBlob = []
full = ["BatchCreateOrDeleteTags", "CreateSecret", "CreateSecretEvent", "CreateSecretTag", "CreateSecretVersion", "DeleteSecret", "DeleteSecretEvent", "DeleteSecretForSchedule", "DeleteSecretStage", "DeleteSecretTag", "DownloadSecretBlob", "ListNotificationRecords", "ListProjectSecretsTags", "ListResourceInstances", "ListSecretEvents", "ListSecrets", "ListSecretTags", "ListSecretVersions", "RestoreSecret", "RotateSecret", "ShowSecret", "ShowSecretEvent", "ShowSecretStage", "ShowSecretVersion", "UpdateSecret", "UpdateSecretEvent", "UpdateSecretStage", "UpdateVersion", "UploadSecretBlob"]

[lib]
name = "huawei_cloud_api_definitions_CSMS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CSMS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
