[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchCreateIrackTags = []
BatchCreateTags = []
BatchDeleteIrackTags = []
BatchDeleteTags = []
ChangeInstancePassword = []
ChangeServerPowerState = []
CreateInstance = []
DeleteInstance = []
DeleteInstances = []
DownloadServerLogs = []
ExportServerLogs = []
ListAlarms = []
ListEvents = []
ListIDcs = []
ListIRacks = []
ListInstances = []
ListServers = []
ModifyInstanceIp = []
ReinstallOs = []
RunInstances = []
ShowAlarmSummary = []
ShowAlarmTrend = []
ShowEvent = []
ShowInstanceStatus = []
ShowLogsExportStatus = []
ShowRemoteConsole = []
ShowServer = []
ShowServerFirmwareAttributes = []
ShowServerHardwareAttributes = []
ShowServerStatus = []
UpdateIDcs = []
UpdateIRack = []
full = ["BatchCreateIrackTags", "BatchCreateTags", "BatchDeleteIrackTags", "BatchDeleteTags", "ChangeInstancePassword", "ChangeServerPowerState", "CreateInstance", "DeleteInstance", "DeleteInstances", "DownloadServerLogs", "ExportServerLogs", "ListAlarms", "ListEvents", "ListIDcs", "ListInstances", "ListIRacks", "ListServers", "ModifyInstanceIp", "ReinstallOs", "RunInstances", "ShowAlarmSummary", "ShowAlarmTrend", "ShowEvent", "ShowInstanceStatus", "ShowLogsExportStatus", "ShowRemoteConsole", "ShowServer", "ShowServerFirmwareAttributes", "ShowServerHardwareAttributes", "ShowServerStatus", "UpdateIDcs", "UpdateIRack"]

[lib]
name = "huawei_cloud_api_definitions_CloudDC"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CloudDC"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
