[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
AddExtensionEvaluation = []
AddExtensionEvaluationReply = []
AddExtensionStar = []
CheckInstanceAccess = []
CheckMaliciousExtensionEvaluation = []
CheckName = []
CreateAcceptance = []
CreateApply = []
CreateEvent = []
CreateExtensionAuthorization = []
CreateInstance = []
CreateInstanceBy3rd = []
CreateLogin = []
CreateRequest = []
DeleteEvaluation = []
DeleteEvaluationReply = []
DeleteInstance = []
ListExtensions = []
ListInstances = []
ListOrgInstances = []
ListProjectTemplates = []
ListPublisher = []
ListStacks = []
PublishExtension = []
ShowAccountStatus = []
ShowCategoryList = []
ShowExtensionAuthorization = []
ShowExtensionDetail = []
ShowExtensionEvaluation = []
ShowExtensionEvaluationStar = []
ShowExtensionTestingResult = []
ShowInstance = []
ShowInstanceStatusInfo = []
ShowPrice = []
ShowResult = []
StartChat = []
StartInstance = []
StopInstance = []
SyncChat = []
SyncGetChatResult = []
UpdateInstance = []
UpdateInstanceActivity = []
UploadExtensionFile = []
UploadFilePublisher = []
full = ["AddExtensionEvaluation", "AddExtensionEvaluationReply", "AddExtensionStar", "CheckInstanceAccess", "CheckMaliciousExtensionEvaluation", "CheckName", "CreateAcceptance", "CreateApply", "CreateEvent", "CreateExtensionAuthorization", "CreateInstance", "CreateInstanceBy3rd", "CreateLogin", "CreateRequest", "DeleteEvaluation", "DeleteEvaluationReply", "DeleteInstance", "ListExtensions", "ListInstances", "ListOrgInstances", "ListProjectTemplates", "ListPublisher", "ListStacks", "PublishExtension", "ShowAccountStatus", "ShowCategoryList", "ShowExtensionAuthorization", "ShowExtensionDetail", "ShowExtensionEvaluation", "ShowExtensionEvaluationStar", "ShowExtensionTestingResult", "ShowInstance", "ShowInstanceStatusInfo", "ShowPrice", "ShowResult", "StartChat", "StartInstance", "StopInstance", "SyncChat", "SyncGetChatResult", "UpdateInstance", "UpdateInstanceActivity", "UploadExtensionFile", "UploadFilePublisher"]

[lib]
name = "huawei_cloud_api_definitions_CloudIDE"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CloudIDE"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
